View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029909 | Open CASCADE | OCCT:Coding | public | 2018-06-29 13:39 | 2019-07-10 18:53 |
Reporter | bugmaster | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | Debian80 64 bit | ||||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029909: Porting to Debian80-64 : Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products | ||||
Description | qtconcurrentfilter.h:108, GNU C Compiler 4 (gcc), Priority: Normal typedef 'Iterator' locally defined but not used [-Wunused-local-typedefs] | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
These warnings block implementation of jenkins-test-12 http://jenkins-test-12.nnov.opencascade.com/view/JT-12/view/SAMPLES/job/JT-12-OCCT-Debian80-64-qt-samples-linux/1/warnings23Result/ http://jenkins-test-12.nnov.opencascade.com/view/JT-12/view/SAMPLES/job/JT-12-Products-Debian80-64-qt-samples-linux/1/warnings23Result/ |
|
++ echo 'export QTDIR=/dn29/PRODUCTS/maintenance/opencascade-6.7.1/Debian80-64/qt-4.8.4' For information - this bug in Qt headers is expected to be fixed since Qt 4.8.5 release: https://bugreports.qt.io/browse/QTBUG-30594 |
|
Branch CR29909 has been created by kgv. SHA-1: 76e822525d96aad1f41dfaab663cfe0a622bbe68 Detailed log of new commits: Author: kgv Date: Tue Jul 3 14:31:40 2018 +0300 0029909: Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products on Debian80 64 bit Standard_WarningsDisable.hxx has been extended by ignoring -Wunused-local-typedefs within GCC compiler. |
|
Patch is ready for review. http://jenkins-test-12.nnov.opencascade.com/view/CR29909-master-KGV/view/SAMPLES/ |
|
No remarks, please integrate |
|
qt was replaced by qt-5.9.1 |
|
Tested on jenkins-test-12 |
|
Branch CR29909 has been deleted by inv. SHA-1: 76e822525d96aad1f41dfaab663cfe0a622bbe68 |
occt: master b2cd90e2 2018-07-03 11:31:40 Committer: bugmaster Details Diff |
0029909: Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products on Debian80 64 bit Standard_WarningsDisable.hxx has been extended by ignoring -Wunused-local-typedefs within GCC compiler. |
Affected Issues 0029909 |
|
mod - src/Standard/Standard_WarningsDisable.hxx | Diff File | ||
mod - src/Standard/Standard_WarningsRestore.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-06-29 13:39 | bugmaster | New Issue | |
2018-06-29 13:39 | bugmaster | Assigned To | => nds |
2018-06-29 13:41 | bugmaster | Note Added: 0077118 | |
2018-06-29 13:41 | bugmaster | Status | new => feedback |
2018-06-29 13:43 | bugmaster | Note Edited: 0077118 | |
2018-06-29 13:43 | bugmaster | Status | feedback => assigned |
2018-06-29 13:44 | bugmaster | Product Version | => 7.3.0 |
2018-06-29 13:46 | bugmaster | Summary | 0029908: Coding - qt compiler warnings in Samples in OCCT and Products on Debian80 64 bit => Coding - qt compiler warnings in Samples in OCCT and Products on Debian80 64 bit |
2018-07-03 14:08 | kgv | Note Added: 0077232 | |
2018-07-03 14:10 | kgv | Summary | Coding - qt compiler warnings in Samples in OCCT and Products on Debian80 64 bit => Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products on Debian80 64 bit |
2018-07-03 14:32 | git | Note Added: 0077234 | |
2018-07-03 15:18 | kgv | Relationship added | related to 0029310 |
2018-07-03 15:19 | kgv | Note Added: 0077235 | |
2018-07-03 15:19 | kgv | Assigned To | nds => abv |
2018-07-03 15:19 | kgv | Status | assigned => resolved |
2018-07-03 15:19 | kgv | Note Edited: 0077232 | |
2018-07-04 01:03 |
|
Note Added: 0077249 | |
2018-07-04 01:03 |
|
Assigned To | abv => bugmaster |
2018-07-04 01:03 |
|
Status | resolved => reviewed |
2018-07-04 18:05 | bugmaster | Note Added: 0077273 | |
2018-07-04 21:19 | bugmaster | Test case number | => Not needed |
2018-07-04 21:19 | bugmaster | Note Added: 0077278 | |
2018-07-04 21:19 | bugmaster | Status | reviewed => tested |
2018-07-05 12:33 | bugmaster | Summary | Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products on Debian80 64 bit => Porting to Debian80-64 : Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products |
2018-07-08 11:37 | bugmaster | Changeset attached | => occt master b2cd90e2 |
2018-07-08 11:37 | bugmaster | Status | tested => verified |
2018-07-08 11:37 | bugmaster | Resolution | open => fixed |
2018-07-08 12:00 | git | Note Added: 0077358 | |
2019-07-10 18:53 |
|
Relationship added | related to 0029128 |