0029909: Coding - GCC compiler warnings in Qt headers while building Samples in OCCT and Products on Debian80 64 bit

Standard_WarningsDisable.hxx has been extended by ignoring -Wunused-local-typedefs within GCC compiler.