src/Standard/Standard_WarningsRestore.hxx
@@ -24,7 +24,11 @@
 //! #include <dirty_header.h> // some header that can generate warnings
 //! #include <Standard_WarningsRestore.hxx>
 
-#ifdef _MSC_VER
-#pragma warning(pop)
+#if defined(__clang__)
+  #pragma clang diagnostic pop
+#elif defined(_MSC_VER)
+  #pragma warning(pop)
+#elif defined(__GNUC__) && (__GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ >= 6))
+  #pragma GCC diagnostic pop
 #endif
 
